--- a/apps/blog/package.json
+++ b/apps/blog/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
+    "build:gh-pages": "astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
