--- a/.github/workflows/ai-content-generation.yml
+++ b/.github/workflows/ai-content-generation.yml
@@ -39,12 +39,14 @@ jobs:
 
       - name: Install dependencies
         run: |
-          npm install openai @octokit/rest date-fns
+          cd .github/scripts
+          npm install
 
       - name: Generate content
         id: generate
         run: |
-          node .github/scripts/generate-content.js
+          cd .github/scripts
+          node generate-content.js
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           TOPIC_OVERRIDE: ${{ github.event.inputs.topic_override }}
