--- a/.github/workflows/ai-content-generation.yml
+++ b/.github/workflows/ai-content-generation.yml
@@ -23,7 +23,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
-      pull-requests: write
+      actions: read
     
     steps:
       - name: Checkout repository
