--- a/apps/blog/package.json
+++ b/apps/blog/package.json
@@ -7,7 +7,12 @@
     "build": "astro build",
     "build:gh-pages": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:unit": "vitest run --reporter=junit --outputFile=test-results/junit.xml",
+    "test:e2e": "playwright test --reporter=junit --output-dir=test-results",
+    "test:all": "pnpm test:unit && pnpm test:e2e"
   },
   "dependencies": {
     "@astrojs/mdx": "^4.3.13",
@@ -15,5 +20,11 @@
     "@astrojs/sitemap": "^3.6.0",
     "astro": "^5.16.5",
     "sharp": "^0.34.3"
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.48.0",
+    "@vitest/ui": "^2.1.8",
+    "jsdom": "^25.0.1",
+    "vitest": "^2.1.8"
   }
 }
