--- a/.github/workflows/deploy-blog.yml
+++ b/.github/workflows/deploy-blog.yml
@@ -44,6 +44,7 @@ jobs:
       - name: Install dependencies
         run: |
           cd apps/blog
+          # Install dependencies (will update lockfile if needed for new deps)
           pnpm install
 
       - name: Build blog
@@ -82,6 +83,7 @@ jobs:
       - name: Install dependencies
         run: |
           cd apps/blog
+          # Install dependencies (will update lockfile if needed for new deps)
           pnpm install
 
       - name: Run unit tests
