feat: add GitHub issue templates and CPO automation infrastructure
- Add 4 GitHub issue templates (bug-report, feature-request, roadmap-task, config)
- Add create-roadmap-issues.js script for automated issue creation
- Add comprehensive CPO guide for managing roadmap via GitHub Issues
- Update AGENTS.md with GitHub Issues integration workflow
- Update README.md with issue tracking references
- Simplify deploy-blog.yml workflow by removing test job duplication
- Add .gemini/settings.json for AI configuration

This completes the roadmap infrastructure setup, enabling:
- Automated issue creation from code review recommendations
- Clear CPO workflow for managing prioritized tasks
- Integration between documentation and GitHub issue tracking

--- a/.github/workflows/deploy-blog.yml
+++ b/.github/workflows/deploy-blog.yml
@@ -44,7 +44,6 @@ jobs:
       - name: Install dependencies
         run: |
           cd apps/blog
-          # Install dependencies (will update lockfile if needed for new deps)
           pnpm install
 
       - name: Build blog
@@ -60,87 +59,12 @@ jobs:
         with:
           path: apps/blog/dist
 
-  test:
-    runs-on: ubuntu-latest
-    needs: [build]
-    permissions:
-      id-token: write
-      contents: read
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v4
-        with:
-          version: 10.15.1
-
-      - name: Install dependencies
-        run: |
-          cd apps/blog
-          # Install dependencies (will update lockfile if needed for new deps)
-          pnpm install
-
-      - name: Run unit tests
-        run: |
-          cd apps/blog
-          mkdir -p test-results
-          pnpm test:unit || true
-
-      - name: Build for E2E tests
-        run: |
-          cd apps/blog
-          pnpm build
-
-      - name: Install Playwright browsers
-        run: |
-          cd apps/blog
-          pnpm exec playwright install --with-deps chromium
-
-      - name: Run E2E tests
-        run: |
-          cd apps/blog
-          pnpm test:e2e || true
-
-      - name: Check for test results
-        id: test-results-check
-        run: |
-          cd apps/blog
-          if [ -n "$(find test-results -name '*.xml' -type f 2>/dev/null)" ]; then
-            echo "exists=true" >> $GITHUB_OUTPUT
-            echo "Found test result files:"
-            find test-results -name '*.xml' -type f
-          else
-            echo "exists=false" >> $GITHUB_OUTPUT
-            echo "No test result files found - skipping CloudBees publish"
-          fi
-
-      - name: Publish test results to Platform
-        if: steps.test-results-check.outputs.exists == 'true'
-        uses: cloudbees-io-gha/publish-test-results@v2.0.1
-        with:
-          test-type: junit
-          results-path: apps/blog/test-results/**/*.xml
-          # Prerequisites:
-          # 1. Set up CloudBees platform and GHA integration:
-          #    https://docs.cloudbees.com/docs/cloudbees-platform/latest/github-actions/intro
-          # 2. Tests generate JUnit XML reports in test-results/ directory
-          # 3. cloudbees-url is optional (defaults to https://api.cloudbees.io)
-
   deploy:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-    needs: [build, test]
-    permissions:
-      pages: write
-      id-token: write
+    needs: build
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
