fix: resolve automation failures with lockfile and branch conflicts
- Update pnpm-lock.yaml with testing dependencies (@playwright/test, @vitest/ui, jsdom, vitest)
- Fix autonomous agent to delete existing branches before recreating
- Allow lockfile updates in CI workflows with --no-frozen-lockfile flag
- Prevents git push conflicts from repeated automation runs

Fixes: Autonomous Roadmap Agent and Content Automation workflow failures

--- a/.github/workflows/content-automation.yml
+++ b/.github/workflows/content-automation.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Install dependencies
         run: |
           cd apps/blog
-          pnpm install
+          pnpm install --no-frozen-lockfile
 
       - name: Check for scheduled content
         id: check-content
